对象数据的劫持

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,16 @@
   <script>
     let vm = new Vue({
       el: '#app',
-      data(){},
+      data(){
+        return {
+          name: 'aa'
+        }
+      },
       computed(){},
       watch(){}
     })
+    vm._data.name = 'bbb'
+    console.log(vm._data)
   </script>
 </body>
 </html>
