--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
       el: '#app',
       data(){
         return {
-          name: 'aa'
+          name: [{a:1}, {b:2}]
         }
       },
       computed(){},
       watch(){}
     })
-    vm._data.name = 'bbb'
-    console.log(vm._data)
+    vm._data.name.push({c:3})
+    console.log(vm._data.name);
   </script>
 </body>
 </html>
