--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,21 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="app">
+    <p>{{name}}</p>
+  </div>
   <script src="/dist/umd/vue.js"></script>
   <script>
     let vm = new Vue({
       el: '#app',
       data(){
         return {
-          name: [{a:1}, {b:2}]
+          name: 'm'
         }
       },
       computed(){},
       watch(){}
     })
-    vm._data.name.push({c:3})
-    console.log(vm._data.name);
   </script>
 </body>
 </html>
