--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app">
-    <p>{{name}}</p>
+    <p>vvv{{name}}</p>
   </div>
   <script src="/dist/umd/vue.js"></script>
   <script>
