--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app">
-    <p>vvv{{name}}</p>
+    <p>{{name}}</p>
   </div>
   <script src="/dist/umd/vue.js"></script>
   <script>
@@ -15,7 +15,7 @@
       el: '#app',
       data(){
         return {
-          name: 'm'
+          name: '测试'
         }
       },
       computed(){},
